[package]
name = "compose-macro"
version = "0.1.0"
edition = "2021"
description = "A macro for composing functions"
license = "MIT"
readme = "../README.md"
authors = ["Exotik850"]
keywords = ["compose", "macro", "function"]

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
